<resources>
    <string name="app_name">Strooper</string>
    <string name="hintemail">Email o Nombre de Usuario</string>
    <string name="hintpassword">Contraseña</string>
    <string name="botonlogin">Ingresar</string>
    <string name="opcion">Tambien Puedes Ingresar Usando</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="bienHecho">Bien</string>
    <string name="malHecho">Mal</string>
    <string name="Nombrejugador">Nombre Jugador:</string>
    <string name="emailjugador">Email del Jugador:</string>
    <string name="contraseñajugador">Contraseña del Jugador:</string>
    <string name="registar">Registrar</string>
    <string name="cancelar">Cancelar</string>
</resources>
